# eeCTF

./: .eslintignore  .eslintrc  .gitignore  .graphqlrc.yaml  README.md  bootstrap.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/: labeler.yml
.github/actions/setup/: action.yml
.github/workflows/: build-client.yaml  build.yaml  todo.yaml
apps/desktop/: .gitignore  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: index.html  package.json
apps/web/src/: App.css  App.jsx  index.css  main.jsx
apps/web/src/components/: challenge.jsx  machine.jsx  navbar.jsx  news.jsx
apps/web/src/components/cards/: create-team-card.tsx  join-team-card.tsx  login-card.tsx  register-card.tsx
apps/web/src/libs/: api.client.js
apps/web/src/pages/: about.jsx  app.jsx  home.jsx  leaderboard.jsx  login.jsx  news.jsx  register.jsx  verify.jsx  whoami.jsx
apps/web/src/styles/: App.css  home.styles.css  logo.styles.css  navbar.styles.css  whoami.styles.css
scripts/: build-client.sh
