[package]
name = "eectf-desktop-client"
version = "0.1.0"
description = "eeCTF Desktop Client"
authors = ["BRAVO68WEB"]
license = "MIT"
repository = "git@github.com:encryptedge/eeCTF.git"
edition = "2021"

[[bin]]
name = "eectf-desktop-client"           # The name of the target.
path = "build.rs" 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
